# yolo-particle-segmentation

./: .gitignore  README.md  classes.names  pipeline.py  pyproject.toml  requirements.txt  train.py
.cursor/rules/: specify-command.mdc  specify-commands.mdc  speckit-command.mdc  speckit-commands.mdc
.specify/commands/: specify.analyze.toml  specify.checklist.toml  specify.clarify.toml  specify.constitution.toml  specify.implement.toml  specify.plan.toml  specify.specify.toml  specify.tasks.toml
.specify/memory/: constitution.md
specs/001-instance-segmentation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-instance-segmentation/contracts/: pipeline-cli.md
src/: __init__.py
src/cli/: pipeline.py
src/models/: train.py
src/utils/: image_processing.py  serialization.py
tests/integration/: test_pipeline.py
tests/unit/: test_data_utils.py  test_serialization.py
