[project]
name = "instance-segmentation-particles"
version = "0.1.0"
description = "Instance segmentation for raw material particles"
requires-python = ">=3.9"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
